[project]
name = "diff-surfel-rasterization"
version = "0.1.0"
description = "A differentiable rasterizer for 2DGS"
requires-python = ">=3.10"
dependencies = ["torch", "cuda-python", "numpy"]

[build-system]
requires = ["setuptools", "torch", "cuda-python", "numpy"]
build-backend = "setuptools.build_meta"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
